--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>FullStack Ecomerce</title>
     <style>
       body {
         margin:0;
-        padding:0
+        padding:0;
+        font-family: 'Roboto';
       }
     </style>
   </head>
